# movie_scheduler

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  HTMLFetcher.py  README.md  collect_cinemas.py  docker-compose.yml  graph.km  logger_config.py  main.py  pyproject.toml  pyrightconfig.json  readme.md  www.maoyan.com.html  xt.code-profile
backend/: .env.example  Dockerfile  pyproject.toml
backend/.runtime/demo/: douban_search.json  show_fetching_cinema_shows.json  show_fetching_cinemas.json  show_fetching_show_dates.json  update_cinema_info.json  update_movie_base_info.html  update_movie_extra_info.json
backend/docs/: api.md  architecture.md  conventions.md  database.md  structure.md  testing.md
backend/migrations/: env.py
backend/migrations/versions/: 12c446c6303d_drop_release_year_from_movies.py  244121ed6ce3_baseline.py  6a1f0e2d9c34_make_movie_updated_at_manual.py  8c0f4f7f4ab1_add_douban_url_to_movies.py  9d2a4f6b8c10_move_show_run_timestamp_to_movies.py  a4c1d2e3f5b6_replace_first_seen_with_first_showing.py  b3e9f2a17c84_add_first_seen_at_to_movies.py  c7d8e9f0a1b2_add_planning_items.py  e5f7a9c1d2b4_add_is_wished_and_drop_list_type.py  f7b9c2d1e3a5_add_movie_shows_and_fetch_runs.py
backend/scripts/: export_sample.py  start-dev.sh
backend/src/api/: main.py
backend/src/app/: app.py  main.py  routes.py  schemas.py
backend/src/app/api/: __init__.py  error_handlers.py
backend/src/app/city/: __init__.py  endpoints.py  schemas.py
backend/src/app/core/: __init__.py  bootstrap.py  config.py  database.py  exceptions.py  file_saver.py  logger.py  scheduler.py
backend/src/app/models/: __init__.py  cinema.py  movie.py  movie_show.py  planning.py
backend/src/app/movie/: __init__.py  endpoints.py  entities.py  gateway.py  result_builder.py  schemas.py  service.py
backend/src/app/planning/: __init__.py  endpoints.py  schemas.py  service.py
backend/src/app/repositories/: __init__.py  cinema.py  cinema_repository.py  movie.py  movie_repository.py  movie_show.py  planning.py
backend/src/app/schemas/: __init__.py  request_schema.py  response.py  response_schema.py
backend/src/app/services/: __init__.py  city_service.py  movie_service.py  show_service.py  update_service.py
backend/src/app/show/: __init__.py  cinema_client.py  cinema_show_client.py  date_client.py  endpoints.py  entities.py  fetcher.py  gateway.py  request_helper.py  result_builder.py  scheduler.py  schemas.py  service.py  show_client.py  show_date_client.py
backend/src/app/update/: __init__.py  cinema_update_reset_helper.py  endpoints.py  result_builder.py  schemas.py  service.py  updater.py
backend/src/app/use_cases/: __init__.py
backend/src/config_manager/: config_manager.py
backend/src/core/show_for_selected_movie_fetcher/: html_with_all_movie_showdate_parser.py  html_with_all_movie_showdate_scraper.py  show_for_selected_movie_fetcher.py
backend/src/db/: db_operate_manager.py
backend/src/db/db_models/: __init__.py
backend/src/movie_scheduler/: __init__.py  __main__.py  app.py  config.py
backend/src/movie_scheduler/core/: db.py  exceptions.py  logging.py  request_logging.py  scheduler.py
backend/src/movie_scheduler/shared/: maoyan.py  (+3 more)
backend/src/utils/: date_utils.py  file_saver.py  logger.py
backend/tests/shared/: test_maoyan.py
(+326 files in other folders)
