[project]
name = "movie-scheduler-workspace"
version = "0.1.0"
description = "电影排片项目工作区配置"
requires-python = ">=3.11"
dependencies = []

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.pytest.ini_options]
pythonpath = ["backend/src"]
testpaths = ["backend/tests"]
